--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,24 @@
+
 .App {
   text-align: center;
   background: #333;
   color: #FEA;
   height: 50vh;
+  height: 100vh;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Whatsy {
+  width: 20em;
+  margin: 2em;
+  padding: 1em;
+  background-color: #075E54;
+  border-radius: 10px;
+  color: white;
+  font-weight: 900;
 }
