--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 
 .App {
   text-align: center;
-  background: #333;
+  background: linear-gradient(to bottom, #333, #333 ,#090);
   color: #FEA;
   height: 50vh;
   height: 100vh;
